# HNCDI-Explain-Beginners-Guide-to-QC

./: .gitignore  1-bell-state-exercise-ibmq.ipynb  1-bell-state-solution-ibmq.ipynb  2-pi-estimate-exercise.ipynb  2-pi-estimate-solution-ibmq.ipynb  2-pi-estimate-solution-local.ipynb  2-pi-estimate-solution.ipynb  HNCDI-Explain.html  HNCDI-Explain.ipynb  README.md  pyproject.toml
